tests/class_type/class_type.exp
Error ----------------------------------------------------------- test2.js:10:10

Cannot call `check` with `new A()` bound to `inst` because `A` is incompatible
with `B`.

Error: test2.js:10
 10: check(B, new A);
              ^^^^^ Cannot call `check` with `new A()` bound to `inst` because `A` [1] is incompatible with `B` [2].
  References:
   10: check(B, new A);
                ^^^^^ [1]: `A`
    7: class B extends A { }
             ^ [2]: `B`

Error ----------------------------------------------------------- test2.js:12:10

Cannot call `check` with `new A()` bound to `inst` because `A` is incompatible
with `C`.

Error: test2.js:12
 12: check(C, new A);
              ^^^^^ Cannot call `check` with `new A()` bound to `inst` because `A` [1] is incompatible with `C` [2].
  References:
   12: check(C, new A);
                ^^^^^ [1]: `A`
    8: class C { }
             ^ [2]: `C`

Error ----------------------------------------------------------- test2.js:13:10

Cannot call `check` with `new B()` bound to `inst` because `B` is incompatible
with `C`.

Error: test2.js:13
 13: check(C, new B);
              ^^^^^ Cannot call `check` with `new B()` bound to `inst` because `B` [1] is incompatible with `C` [2].
  References:
   13: check(C, new B);
                ^^^^^ [1]: `B`
    8: class C { }
             ^ [2]: `C`

Error ----------------------------------------------------------- test2.js:14:10

Cannot call `check` with `new C()` bound to `inst` because `C` is incompatible
with `B`.

Error: test2.js:14
 14: check(B, new C);
              ^^^^^ Cannot call `check` with `new C()` bound to `inst` because `C` [1] is incompatible with `B` [2].
  References:
   14: check(B, new C);
                ^^^^^ [1]: `C`
    7: class B extends A { }
             ^ [2]: `B`


Found 4 errors
